// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error message when failed to get movie list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ant-row ant-row-center"
        style="margin: -5px -5px 5px -5px;"
      >
        <div
          class="ant-alert ant-alert-error ant-alert-with-description"
          data-show="true"
          data-testid="movielist-error-message"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle ant-alert-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
              />
              <path
                d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
            </svg>
          </span>
          <span
            class="ant-alert-message"
          />
          <span
            class="ant-alert-description"
          >
            Some Error is Occured, Please check your internet connection and refresh the page
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-row ant-row-center"
      style="margin: -5px -5px 5px -5px;"
    >
      <div
        class="ant-alert ant-alert-error ant-alert-with-description"
        data-show="true"
        data-testid="movielist-error-message"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
        <span
          class="ant-alert-message"
        />
        <span
          class="ant-alert-description"
        >
          Some Error is Occured, Please check your internet connection and refresh the page
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render movie list when data is no null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ant-row ant-row-center"
        style="margin: -5px -5px 5px -5px;"
      >
        <div
          class="ant-col ant-col-xs-11 ant-col-sm-7 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-3"
          data-testid="movie-list"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            style="min-width: 5rem; max-width: 11rem; position: relative;"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-icon-only ant-btn-dangerous"
              data-testid="favorite-button-test"
              style="display: none; position: absolute; z-index: 1;"
              type="button"
            >
              <span
                aria-label="heart"
                class="anticon anticon-heart"
                role="img"
                style="color: red;"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="heart"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9z"
                  />
                </svg>
              </span>
            </button>
            <a
              href="/movie/1"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
              >
                <div
                  class="ant-card-cover"
                >
                  <img
                    alt="movie-poster"
                    src="https://image.tmdb.org/t/p/w500test_poster"
                    style="filter: none;"
                  />
                </div>
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-card-meta"
                  >
                    <div
                      class="ant-card-meta-detail"
                    >
                      <div
                        class="ant-card-meta-title"
                      >
                        test
                      </div>
                    </div>
                  </div>
                  <ul
                    class="ant-rate ant-rate-disabled"
                    role="radiogroup"
                    style="max-width: 80px;"
                    tabindex="-1"
                  >
                    <li
                      class="ant-rate-star ant-rate-star-full"
                    >
                      <div
                        aria-checked="true"
                        aria-posinset="1"
                        aria-setsize="5"
                        role="radio"
                        tabindex="-1"
                      >
                        <div
                          class="ant-rate-star-first"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-rate-star-second"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="ant-rate-star ant-rate-star-full"
                    >
                      <div
                        aria-checked="true"
                        aria-posinset="2"
                        aria-setsize="5"
                        role="radio"
                        tabindex="-1"
                      >
                        <div
                          class="ant-rate-star-first"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-rate-star-second"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="ant-rate-star ant-rate-star-full"
                    >
                      <div
                        aria-checked="true"
                        aria-posinset="3"
                        aria-setsize="5"
                        role="radio"
                        tabindex="-1"
                      >
                        <div
                          class="ant-rate-star-first"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-rate-star-second"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="ant-rate-star ant-rate-star-full"
                    >
                      <div
                        aria-checked="true"
                        aria-posinset="4"
                        aria-setsize="5"
                        role="radio"
                        tabindex="-1"
                      >
                        <div
                          class="ant-rate-star-first"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-rate-star-second"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="ant-rate-star ant-rate-star-zero"
                    >
                      <div
                        aria-checked="true"
                        aria-posinset="5"
                        aria-setsize="5"
                        role="radio"
                        tabindex="-1"
                      >
                        <div
                          class="ant-rate-star-first"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-rate-star-second"
                        >
                          <span
                            aria-label="star"
                            class="anticon anticon-star"
                            role="img"
                            style="max-width: 8px; min-width: 2px;"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="star"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Load more
        </span>
      </button>
      <div
        class="ant-alert ant-alert-error ant-alert-with-description"
        data-show="true"
        style="display: none;"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
        <span
          class="ant-alert-message"
        >
          Error
        </span>
        <span
          class="ant-alert-description"
        >
          Failed to load more movie, please check your internet connection and try again
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-row ant-row-center"
      style="margin: -5px -5px 5px -5px;"
    >
      <div
        class="ant-col ant-col-xs-11 ant-col-sm-7 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-3"
        data-testid="movie-list"
        style="padding: 5px 5px 5px 5px;"
      >
        <div
          style="min-width: 5rem; max-width: 11rem; position: relative;"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-icon-only ant-btn-dangerous"
            data-testid="favorite-button-test"
            style="display: none; position: absolute; z-index: 1;"
            type="button"
          >
            <span
              aria-label="heart"
              class="anticon anticon-heart"
              role="img"
              style="color: red;"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="heart"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9z"
                />
              </svg>
            </span>
          </button>
          <a
            href="/movie/1"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="movie-poster"
                  src="https://image.tmdb.org/t/p/w500test_poster"
                  style="filter: none;"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-rate ant-rate-disabled"
                  role="radiogroup"
                  style="max-width: 80px;"
                  tabindex="-1"
                >
                  <li
                    class="ant-rate-star ant-rate-star-full"
                  >
                    <div
                      aria-checked="true"
                      aria-posinset="1"
                      aria-setsize="5"
                      role="radio"
                      tabindex="-1"
                    >
                      <div
                        class="ant-rate-star-first"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="ant-rate-star-second"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-rate-star ant-rate-star-full"
                  >
                    <div
                      aria-checked="true"
                      aria-posinset="2"
                      aria-setsize="5"
                      role="radio"
                      tabindex="-1"
                    >
                      <div
                        class="ant-rate-star-first"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="ant-rate-star-second"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-rate-star ant-rate-star-full"
                  >
                    <div
                      aria-checked="true"
                      aria-posinset="3"
                      aria-setsize="5"
                      role="radio"
                      tabindex="-1"
                    >
                      <div
                        class="ant-rate-star-first"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="ant-rate-star-second"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-rate-star ant-rate-star-full"
                  >
                    <div
                      aria-checked="true"
                      aria-posinset="4"
                      aria-setsize="5"
                      role="radio"
                      tabindex="-1"
                    >
                      <div
                        class="ant-rate-star-first"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="ant-rate-star-second"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-rate-star ant-rate-star-zero"
                  >
                    <div
                      aria-checked="true"
                      aria-posinset="5"
                      aria-setsize="5"
                      role="radio"
                      tabindex="-1"
                    >
                      <div
                        class="ant-rate-star-first"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="ant-rate-star-second"
                      >
                        <span
                          aria-label="star"
                          class="anticon anticon-star"
                          role="img"
                          style="max-width: 8px; min-width: 2px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="star"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Load more
      </span>
    </button>
    <div
      class="ant-alert ant-alert-error ant-alert-with-description"
      data-show="true"
      style="display: none;"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
          />
          <path
            d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
      <span
        class="ant-alert-message"
      >
        Error
      </span>
      <span
        class="ant-alert-description"
      >
        Failed to load more movie, please check your internet connection and try again
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
